--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,6 +13,79 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <RelativeLayout
+        android:id="@+id/loading_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff">
+        <ImageView
+            android:id="@+id/loading_icon"
+            android:layout_centerInParent="true"
+            android:src="@drawable/clear_day_b"
+            android:layout_width="@dimen/big_icon_128dp"
+            android:layout_height="@dimen/big_icon_128dp"
+            android:translationY="@dimen/margin_n_16"
+            android:layout_marginBottom="@dimen/margin_n_16"/>
+        <TextView
+            android:id="@+id/loading_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fontFamily="@font/nunito"
+            android:textSize="@dimen/text_view_18sp"
+            android:layout_below="@id/loading_icon"
+            android:layout_centerInParent="true"
+            android:textColor="#000"
+            android:translationY="@dimen/margin_n_16"
+            android:text="@string/loading_text"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/no_connection_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:background="#fff">
+        <ImageView
+            android:id="@+id/no_connection_icon"
+            android:layout_width="@dimen/icon_90dp"
+            android:layout_height="@dimen/icon_90dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_sadcloud"
+            android:translationY="@dimen/margin_n_16" />
+        <TextView
+            android:id="@+id/tv_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#000"
+            android:layout_below="@id/no_connection_icon"
+            app:fontFamily="@font/nunito"
+            android:textSize="@dimen/text_view_18sp"
+            android:translationY="@dimen/margin_n_16"
+            android:text="@string/no_connection_tv1"/>
+        <TextView
+            android:id="@+id/tv_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#000"
+            android:layout_below="@id/tv_1"
+            app:fontFamily="@font/nunito"
+            android:textSize="@dimen/text_view_18sp"
+            android:translationY="@dimen/margin_n_16"
+            android:text="@string/no_connection_tv2"/>
+        <TextView
+            android:id="@+id/tv_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#000"
+            android:layout_below="@id/tv_2"
+            app:fontFamily="@font/nunito"
+            android:textSize="@dimen/text_view_18sp"
+            android:translationY="@dimen/margin_n_16"
+            android:text="@string/no_connection_tv3"/>
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
