--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,21 +13,20 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <RelativeLayout
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         android:background="#fff">
         <ImageView
             android:id="@+id/loading_icon"
             android:layout_centerInParent="true"
-            android:src="@drawable/clear_day_b"
+            android:src="@drawable/ic_loading"
             android:layout_width="@dimen/big_icon_128dp"
             android:layout_height="@dimen/big_icon_128dp"
-            android:translationY="@dimen/margin_n_16"
             android:layout_marginBottom="@dimen/margin_n_16"/>
         <TextView
             android:id="@+id/loading_text"
@@ -38,7 +37,6 @@
             android:layout_below="@id/loading_icon"
             android:layout_centerInParent="true"
             android:textColor="#000"
-            android:translationY="@dimen/margin_n_16"
             android:text="@string/loading_text"/>
     </RelativeLayout>
     <RelativeLayout
@@ -88,4 +86,4 @@
             android:translationY="@dimen/margin_n_16"
             android:text="@string/no_connection_tv3"/>
     </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
