--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -233,6 +233,47 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/tv_explicit_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="Are you okay with swearing?"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="3">
+                <Button
+                    android:id="@+id/btn_im_not"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/im_not"/>
+                <Button
+                    android:id="@+id/btn_hell_yeah"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/hell_yeah"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
                 android:id="@+id/tv_help_setting"
                 android:layout_width="match_parent"
                 app:fontFamily="@font/nunito"
