--- a/app/src/main/res/layout/air_quality_detailed_dialog.xml
+++ b/app/src/main/res/layout/air_quality_detailed_dialog.xml
@@ -185,7 +185,9 @@
         android:id="@+id/relative_layout_aqi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_8">
+        android:paddingLeft="@dimen/margin_8"
+        android:paddingStart="@dimen/margin_8"
+        android:paddingEnd="@dimen/margin_8">
         <TextView
             android:id="@+id/tv_aqi_index"
             android:layout_alignParentLeft="true"
