--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,9 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
     tools:context=".MainFragments.DetailsFragment">
     <LinearLayout
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -28,7 +25,10 @@
             android:id="@+id/layoutRealFeel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_8">
+            android:layout_marginTop="@dimen/margin_8"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/tv_tempRealFeel"
@@ -65,7 +65,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin">
             <LinearLayout
                 android:id="@+id/layoutUV"
                 android:layout_width="0dp"
@@ -126,7 +129,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin">
             <LinearLayout
                 android:id="@+id/layoutVisibility"
                 android:layout_width="0dp"
@@ -186,7 +192,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/margin_16"
-            android:padding="@dimen/margin_8">
+            android:padding="@dimen/margin_8"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/tv_aqi_title"
@@ -237,7 +246,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="@dimen/margin_16"
-            android:padding="@dimen/margin_8">
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin">
             <TextView
                 android:id="@+id/wind_title"
                 android:text="@string/wind_title"
@@ -316,12 +327,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/forecast_title"
-                android:textSize="@dimen/text_view_18sp"
-                android:padding="@dimen/margin_8"
+                android:textSize="@dimen/text_view_24sp"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
                 app:fontFamily="@font/nunito"
                 />
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="@dimen/margin_8"
                 android:id="@+id/rv_forecast"
                 tools:listitem="@layout/forecast_item"
                 android:layout_width="wrap_content"
