--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -13,9 +13,10 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/instruction_pic"
             android:layout_width="@dimen/icon_90dp"
             android:layout_height="@dimen/icon_90dp"
-            android:src="@drawable/happycloud" />
+            android:src="@drawable/happycloud"/>
 
         <TextView
             android:layout_width="wrap_content"
