--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -13,9 +13,9 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/instruction_pic"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp360"
-            android:src="@drawable/instruction1" />
+            android:layout_height="@dimen/dp360" />
 
         <TextView
             android:layout_width="wrap_content"
