--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -37,11 +37,27 @@
                     android:layout_marginBottom="@dimen/margin_8"
                     android:layout_gravity="bottom"/>
             </LinearLayout>
-            <ImageView
-                android:id="@+id/widget_date"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom" />
+                android:orientation="horizontal"
+                android:layout_gravity="bottom">
+                <ImageView
+                    android:id="@+id/widget_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_4"
+                    android:layout_marginEnd="@dimen/margin_4"
+                    android:src="@drawable/ic_location_w"/>
+                <ImageView
+                    android:id="@+id/widget_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
 
 
         </LinearLayout>
